# Phycas

./: .gitignore  BUGS  CHANGES  INSTALL  Jamfile  Jamroot  Jamroot.polmac  Jamrules  MANIFEST.common  MANIFEST.in  MANIFEST.linux  MANIFEST.windows  Makefile.am  README  RELEASECHECKLIST  TODO  autorun  boost-build.jam  build-bjam-and-phycas.py  build.sh  build_linux_source_distr.sh  build_mac_installer.sh  build_phycas_tarball.py  build_template.sh  build_windows_installer.bat  build_windows_source_distr.bat  configure.in  dojam.py  download_and_build.py  embed.c  fakecompiler.py  generate_ctags.py  install.sh  install_phycas.bat  macDeveloperUninstall.sh  makePhycasTar.sh  obsoleteJamrules  phycas.bat  phycas.bbproject  readme.txt  (+5 more)
VC/: VC.ncb  VC.sln  VC.vcproj  phypy.sln  readme.txt
VC10/: VC.sln  readme.txt
VC9/: VC.sln  readme.txt
phycas/src/ncl/: Makefile.am  nxs_basic_manager.cpp  nxs_basic_manager.hpp  nxs_block.cpp  nxs_block.hpp  nxs_exception.cpp  nxs_exception.hpp  nxs_reader.cpp  nxs_reader.hpp  nxs_token.cpp  nxs_token.hpp  singleton.hpp
phycas/src/ncl/characters/: data_pattern.hpp  nxs_char_listener.cpp  nxs_char_listener.hpp  nxs_characters_block.cpp  nxs_characters_block.hpp  nxs_characters_block_cmd_settings.hpp  nxs_characters_block_commands.cpp  nxs_characters_manager.cpp  nxs_characters_manager.hpp  stored_matrix.hpp
phycas/src/ncl/command/: nxs_array_cmd_param.hpp  nxs_auto_command.cpp  nxs_auto_command.hpp  nxs_choice_cmd_param.cpp  nxs_choice_cmd_param.hpp  nxs_cmd_param.cpp  nxs_cmd_param.hpp  nxs_command.cpp  nxs_command.hpp  nxs_command_decl.hpp  nxs_command_manager.cpp  nxs_command_manager.hpp  nxs_command_output.cpp  nxs_command_output.hpp  nxs_file_cmd_param.cpp  nxs_file_cmd_param.hpp  nxs_mixed_cmd_param.cpp  nxs_mixed_cmd_param.hpp  nxs_primitive_cmd_param.cpp  nxs_primitive_cmd_param.hpp  nxs_restricted_string_cmd_param.cpp  nxs_restricted_string_cmd_param.hpp  nxs_set_cmd_param.cpp  nxs_set_cmd_param.hpp
phycas/src/ncl/misc/: algorithm_extensions.hpp  arg_stream.cpp  arg_stream.hpp  compile_assert.hpp  eliminated_index_slider.cpp  eliminated_index_slider.hpp  generic_type_mapping.hpp  nxs_copy.hpp  nxs_data_type.cpp  nxs_data_type.hpp  nxs_data_type_inl.hpp  nxs_discrete_matrix.cpp  nxs_discrete_matrix.hpp  nxs_file_path.cpp  nxs_file_path.hpp  nxs_index_set.cpp  nxs_index_set.hpp  nxs_index_set_output.hpp  nxs_simple_stats.hpp  nxs_test.cpp  nxs_test.hpp  nxs_test_impl.hpp  string_extensions.cpp  string_extensions.hpp  utilities.hpp
phycas/src/ncl/output/: generic_output_classes.cpp  generic_output_classes.hpp  nxs_console_out_stream_impl.cpp  nxs_console_out_stream_impl.hpp  nxs_input.cpp  nxs_input.hpp  nxs_input_error_wrapper.hpp  nxs_output.hpp  nxs_output_destination_description.hpp  nxs_output_manager_impl.hpp  nxs_output_stream.hpp  nxs_output_stream_wrapper.cpp  nxs_output_stream_wrapper.hpp  nxs_ratio.hpp  nxs_sax_output_wrapper.hpp  nxs_suppress_fwd_decl.hpp  nxs_suppress_output_mgr.hpp  nxs_suppress_output_stream.hpp  nxs_table.cpp  nxs_table.hpp  nxs_table_cell.cpp  nxs_table_cell.hpp  nxs_typist.cpp  nxs_typist.hpp  nxs_user_query.cpp  nxs_user_query.hpp  nxs_xml_socket_fwd_decl.hpp  nxs_xml_socket_output_mgr.cpp  nxs_xml_socket_output_mgr.hpp  nxs_xml_socket_output_stream.cpp  nxs_xml_socket_output_stream.hpp  output_fwd_decl.hpp  temp_basic_output_operators.hpp
phycas/src/ncl/taxa/: base_taxa_manager.cpp  base_taxa_manager.hpp  nxs_alternative_taxa_block.cpp  nxs_alternative_taxa_block.hpp  nxs_taxa_block.cpp  nxs_taxa_block.hpp  nxs_taxa_label_reader.hpp  nxs_taxa_listener.cpp  nxs_taxa_listener.hpp  nxs_taxa_manager.cpp  nxs_taxa_manager.hpp
phycas/src/ncl/trees/: full_tree_description.hpp  newick_verifier.cpp  newick_verifier.hpp  nxs_tree_listener.cpp  nxs_tree_listener.hpp  nxs_trees_block.cpp  nxs_trees_block.hpp  nxs_trees_manager.cpp  nxs_trees_manager.hpp
unused/cipres_services/: .cvsignore  AUTHORS  ChangeLog  bogus_config.h.in  configure.ac  reconf  testEnv
unused/cipres_services/VC7/: VC7.sln
unused/cipres_services/VC7/libciphycas/: libciphycas.vcproj
unused/cipres_services/VC7/read_nexus/: read_nexus.vcproj
unused/cipres_services/VC7/tree_merge/: tree_merge.vcproj
unused/cipres_services/ciphycas/: .cvsignore
unused/cipres_services/read_nexus/: RealMakefile.am  read_nexus_i.cpp
unused/cipres_services/tree_improve_client/: tree_improve_client.cpp
unused/cipres_services/tree_merge/: tree_merge_i.hpp
unused/phycas/: Makefile.am  floor.cpp  floor_command_handlers.cpp  force_include.h  mth_dev_phycas_config.h  phycas_console_config.h  phycas_stdout_config.h  pol_dev_phycas_console_config.h  py_phycas_config.h  windows_cipres_config.h
unused/phycas/command/: .cvsignore  commands_ncl_transform.py  distribution_settings.hpp  excludetaxa_setup.cpp  execute_settings.hpp  gettrees_setup.cpp  gg_setup.cpp  mcmc_setup.cpp  pwd_setup.cpp  sample_settings.hpp  sample_setup.cpp  scm_settings.hpp  set_settings.hpp  set_setup.cpp  taxset_setup.cpp  taxstatus_setup.cpp
unused/phycas/corba/interfaces/IDL/: Client.idl  TreeDatabase.idl
unused/phycas/corba/interfaces/tree_drawer/: TreeDrawer.idl
unused/phycas/corba/interfaces/tree_merger/: CipresI.cpp  CipresI.h  TreeMergeI.cpp  TreeMergeI.h
unused/phycas/likelihood/: rate_manager.cpp
unused/phycas/misc/: long_operation_manager.cpp  long_operation_manager.hpp  memory_check.cpp  pwd.cpp  pwd.hpp
unused/phycas/modules/mcmc/: bush_master.cpp  chain_state.hpp  gibbs_hyperparam.hpp  larget_simon_move.hpp  mcmc.cpp  mcmc.hpp  mcmc_move.hpp  mcmc_settings_output.hpp  prior_summary.cpp  tree_scaler_move.cpp  tree_scaler_move.hpp
unused/phycas/modules/phylodiversity/: pd.cpp  pd.hpp  phylodiversity_summary.hpp  phylodiversity_summary_output.hpp
unused/phycas/modules/sampler/: sampler.cpp
unused/phycas/modules/scm/: scm_summary_output.hpp  wrap_scm.cpp
unused/phycas/rand/: cdf.cpp  cdf.hpp  distribution_manager.cpp  distribution_manager.hpp  lot.hpp
unused/phycas/trees/: topology_manager.cpp  tree_move.hpp  tree_output.hpp  underflow.hpp
(+2129 files in other folders)
