#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# POL: it would be nice if these were the defaults, but thus far I haven't 
# been able to figure out how to get automake to do this. Instead, they
# must be specified on the configure command line (see the last line of the
# autorun file)  
NCLDIR=./
LOKIDIR=./
BOOSTDIR=../boost_1_30_0
ACEDIR=../ACE_wrappers
ACELIBDIR=../ACE_wrappers/lib
TAODIR=../ACE_wrappers/TAO
ORBSVCSDIR=../ACE_wrappers/TAO/orbsvcs

AC_SUBST([LOKIDIR])
AC_SUBST([NCLDIR])
AC_SUBST([BOOSTDIR])
AC_SUBST([ACEDIR])
AC_SUBST([ACELIBDIR])
AC_SUBST([TAODIR])
AC_SUBST([ORBSVCSDIR])

AC_PREREQ(2.57)
AC_INIT(phycas, 0.0, swofford@csit.fsu.edu)
AC_CONFIG_SRCDIR([ncl/])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
# Note from POL: to use default compiler choice, use these:
AC_PROG_CXX
AC_PROG_CC

# Note from POL: to force use of Intel compiler icc, use these:
# AC_PROG_CXX(icc)
# AC_PROG_CC(icc)

AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor memmove memset pow sqrt strchr strtol])

AC_CONFIG_FILES([Makefile
                 phycas/Makefile
                 loki/Makefile
                 ncl/Makefile])
AC_OUTPUT
