bin_PROGRAMS = phycas

AM_CPPFLAGS = -I@LIBLOKI@ -I@NCLDIR@ -I@BOOSTDIR@ -I@ORBSVCSDIR@ -I@ACEDIR@ -I@TAODIR@ -include "pol_dev_phycas_socket_config.h"

AM_LDFLAGS = -L@ACELIBDIR@ -lTAO_CosLifeCycle -lTAO_PortableServer -lTAO_CosNaming -lTAO -lACE 

# AM_CXXFLAGS = -ftemplate-depth-25
# AM_CXXFLAGS = -fast
# AM_LDFLAGS = -fast

phycas_SOURCES = \
	command/copying_setup.cpp \
	command/distribution_setup.cpp \
	command/excludetaxa_setup.cpp \
	command/execute_setup.cpp \
	command/includetaxa_setup.cpp \
	command/mcmc_setup.cpp \
	command/phylodiversity_setup.cpp \
	command/pwd_setup.cpp \
	command/quit_setup.cpp \
	command/sample_setup.cpp \
	command/set_setup.cpp \
	command/taxset_setup.cpp \
	command/taxstatus_setup.cpp \
	command/alias_setup.cpp \
	command/distribution_settings.hpp \
	command/excludetaxa_settings.hpp \
	command/execute_settings.hpp \
	command/includetaxa_settings.hpp \
	command/mcmc_settings.hpp \
	command/phylodiversity_settings.hpp \
	command/sample_settings.hpp \
	command/scm_setup.cpp \
	command/set_settings.hpp \
	command/taxset_settings.hpp \
	command/taxstatus_settings.hpp \
	command/alias_settings.hpp \
	corba/corba_wrapper.cpp \
	corba/corba_wrapper.hpp \
	corba/put_tree_wrapper.cpp \
	corba/put_tree_wrapper.hpp \
	corba/interfaces/ClientC.cpp \
	corba/interfaces/ClientC.h \
	corba/interfaces/ClientC.i \
	corba/interfaces/ClientC.inl \
	corba/interfaces/TreeDatabaseC.cpp \
	corba/interfaces/TreeDatabaseC.h \
	corba/interfaces/TreeDatabaseC.i \
	corba/interfaces/TreeDatabaseC.inl \
	corba/interfaces/TreeDrawerC.cpp \
	corba/interfaces/TreeDrawerC.h \
	corba/interfaces/TreeDrawerC.i \
	corba/interfaces/TreeDrawerC.inl \
	phycas.h \
	phycas_config.h \
	characters/characters_manager.hpp \
	floor.hpp \
	likelihood/const_site_info.hpp \
	likelihood/rate_manager.hpp \
	likelihood/tree_node_attributes.hpp \
	misc/compressed_2d_array.hpp \
	misc/long_operation_manager.hpp \
	misc/memory_check.hpp \
	misc/msg_exception.hpp \
	misc/multiline_bound.hpp \
	misc/pwd.hpp \
	misc/stopwatch.hpp \
	modules/mcmc/bush_master.hpp \
	modules/mcmc/edge_len_prior.hpp \
	modules/mcmc/edge_move.hpp \
	modules/mcmc/gibbs_hyperparam.hpp \
	modules/mcmc/gibbs_param.hpp \
	modules/mcmc/larget_simon_move.hpp \
	modules/mcmc/mcmc.hpp \
	modules/mcmc/mcmc_move.hpp \
	modules/mcmc/slice_sampler.hpp \
	modules/mcmc/tree_scaler_move.hpp \
	modules/mcmc/chain_state.hpp \
	modules/mcmc/mcmc_settings_output.hpp \
	modules/mcmc/move_schedule.hpp \
	modules/mcmc/prior_summary.hpp \
	modules/scm/scm.cpp \
	modules/phylodiversity/pd.hpp \
	modules/phylodiversity/phylodiversity_summary.hpp \
	modules/phylodiversity/phylodiversity_summary_output.hpp \
	modules/sampler/sampler.hpp \
	rand/cdf.hpp \
	rand/distribution_command_param.hpp \
	rand/distribution_description.hpp \
	rand/distribution_manager.hpp \
	rand/lot.hpp \
	rand/probability_distribution.hpp \
	taxa/taxa_manager.hpp \
	trees/draw_context.hpp \
	trees/hky_ad_hoc.hpp \
	trees/node_iterator.hpp \
	trees/node_iterator_types.hpp \
	trees/split.hpp \
	trees/split_manager.hpp \
	trees/topology_manager.hpp \
	trees/tree.hpp \
	trees/tree_counter.hpp \
	trees/tree_id.hpp \
	trees/tree_iterator.hpp \
	trees/tree_manip.hpp \
	trees/tree_move.hpp \
	trees/tree_node.hpp \
	trees/trees_manager.hpp \
	trees/tree_output.hpp \
	trees/underflow.cpp \
	characters/characters_manager.cpp \
	floor.cpp \
	floor_command_handlers.cpp \
	floor_command_setup.cpp \
	floor_construct_destruct.cpp \
	likelihood/const_site_info.cpp \
	likelihood/rate_manager.cpp \
	likelihood/tree_node_attributes.cpp \
	misc/long_operation_manager.cpp \
	misc/memory_check.cpp \
	misc/msg_exception.cpp \
	misc/multiline_bound.cpp \
	misc/pwd.cpp \
	modules/mcmc/bush_master.cpp \
	modules/mcmc/edge_move.cpp \
	modules/mcmc/gibbs_param.cpp \
	modules/mcmc/larget_simon_move.cpp \
	modules/mcmc/mcmc.cpp \
	modules/mcmc/slice_sampler.cpp \
	modules/mcmc/tree_scaler_move.cpp \
	modules/mcmc/move_schedule.cpp \
	modules/mcmc/prior_summary.cpp \
	modules/phylodiversity/pd.cpp \
	modules/sampler/sampler.cpp \
	rand/cdf.cpp \
	rand/lot.cpp \
	rand/distribution_command_param.cpp \
	rand/distribution_description.cpp \
	rand/distribution_manager.cpp \
	rand/probability_distribution.cpp \
	taxa/taxa_manager.cpp \
	trees/draw_context.cpp \
	trees/draw_tree.cpp \
	trees/hky_ad_hoc.cpp \
	trees/split.cpp \
	trees/split_manager.cpp \
	trees/topology_manager.cpp \
	trees/tree.cpp \
	trees/tree_counter.cpp \
	trees/tree_id.cpp \
	trees/tree_manip.cpp \
	trees/tree_node.cpp \
	trees/trees_manager.cpp
phycas_LDADD = @NCLDIR@ncl/libncl.a @LOKIDIR@loki/libloki.a

