AM_CPPFLAGS = -I@NCLDIR@ -I@BOOSTDIR@ -include "../phycas/pol_dev_phycas_console_config.h"

# AM_CXXFLAGS = -ftemplate-depth-25
# AM_CXXFLAGS = -fast
 
lib_LIBRARIES = libncl.a
libncl_a_SOURCES = \
	characters/data_pattern.hpp \
	characters/nxs_char_listener.hpp \
	characters/nxs_characters_block.hpp \
	characters/nxs_characters_block_cmd_settings.hpp \
	characters/nxs_characters_manager.hpp \
	characters/stored_matrix.hpp \
	nxs_basic_manager.hpp \
	nxs_block.hpp \
	nxs_defs.hpp \
	nxs_exception.hpp \
	nxs_manager_with_listeners.hpp \
	nxs_reader.hpp \
	nxs_token.hpp \
	command/nxs_array_cmd_param.hpp \
	command/nxs_auto_command.hpp \
	command/nxs_choice_cmd_param.hpp \
	command/nxs_cmd_param.hpp \
	command/nxs_command.hpp \
	command/nxs_command_decl.hpp \
	command/nxs_command_manager.hpp \
	command/nxs_command_output.hpp \
	command/nxs_file_cmd_param.hpp \
	command/nxs_mixed_cmd_param.hpp \
	command/nxs_primitive_cmd_param.hpp \
	command/nxs_restricted_string_cmd_param.hpp \
	command/nxs_set_cmd_param.hpp \
	misc/algorithm_extensions.hpp \
	misc/arg_stream.hpp \
	misc/compile_assert.hpp \
	misc/eliminated_index_slider.hpp \
	misc/generic_type_mapping.hpp \
	misc/nxs_copy.hpp \
	misc/nxs_data_type.hpp \
	misc/nxs_data_type_inl.hpp \
	misc/nxs_discrete_matrix.hpp \
	misc/nxs_file_path.hpp \
	misc/nxs_index_set.hpp \
	misc/nxs_index_set_output.hpp \
	misc/nxs_simple_stats.hpp \
	misc/nxs_test.hpp \
	misc/nxs_test_impl.hpp \
	misc/string_extensions.hpp \
	misc/utilities.hpp \
	output/generic_output_classes.hpp \
	output/nxs_console_out_stream_impl.hpp \
	output/nxs_input.hpp \
	output/nxs_input_error_wrapper.hpp \
	output/nxs_output.hpp \
	output/nxs_output_manager_impl.hpp \
	output/nxs_output_stream.hpp \
	output/nxs_ratio.hpp \
	output/nxs_sax_output_wrapper.hpp \
	output/nxs_table.hpp \
	output/nxs_table_cell.hpp \
	output/nxs_typist.hpp \
	output/nxs_user_query.hpp \
	output/nxs_xml_socket_fwd_decl.hpp \
	output/nxs_xml_socket_output_mgr.hpp \
	output/nxs_xml_socket_output_stream.hpp \
	output/temp_basic_output_operators.hpp \
	output/nxs_output_stream_wrapper.cpp \
	taxa/base_taxa_manager.hpp \
	taxa/nxs_alternative_taxa_block.hpp \
	taxa/nxs_taxa_block.hpp \
	taxa/nxs_taxa_label_reader.hpp \
	taxa/nxs_taxa_listener.hpp \
	taxa/nxs_taxa_manager.hpp \
	trees/full_tree_description.hpp \
	trees/newick_verifier.hpp \
	trees/nxs_tree_listener.hpp \
	trees/nxs_trees_block.hpp \
	trees/nxs_trees_manager.hpp \
	characters/nxs_char_listener.cpp \
	characters/nxs_characters_block.cpp \
	characters/nxs_characters_block_commands.cpp \
	characters/nxs_characters_manager.cpp \
	nxs_basic_manager.cpp \
	nxs_block.cpp \
	nxs_exception.cpp \
	nxs_reader.cpp \
	nxs_token.cpp \
	command/nxs_auto_command.cpp \
	command/nxs_choice_cmd_param.cpp \
	command/nxs_cmd_param.cpp \
	command/nxs_command.cpp \
	command/nxs_command_manager.cpp \
	command/nxs_command_output.cpp \
	command/nxs_file_cmd_param.cpp \
	command/nxs_mixed_cmd_param.cpp \
	command/nxs_primitive_cmd_param.cpp \
	command/nxs_restricted_string_cmd_param.cpp \
	command/nxs_set_cmd_param.cpp \
	misc/arg_stream.cpp \
	misc/eliminated_index_slider.cpp \
	misc/nxs_data_type.cpp \
	misc/nxs_discrete_matrix.cpp \
	misc/nxs_file_path.cpp \
	misc/nxs_index_set.cpp \
	misc/nxs_test.cpp \
	misc/string_extensions.cpp \
	output/generic_output_classes.cpp \
	output/nxs_console_out_stream_impl.cpp \
	output/nxs_input.cpp \
	output/nxs_table.cpp \
	output/nxs_table_cell.cpp \
	output/nxs_typist.cpp \
	output/nxs_user_query.cpp \
	output/nxs_xml_socket_output_mgr.cpp \
	output/nxs_xml_socket_output_stream.cpp \
	taxa/base_taxa_manager.cpp \
	taxa/nxs_alternative_taxa_block.cpp \
	taxa/nxs_taxa_block.cpp \
	taxa/nxs_taxa_listener.cpp \
	taxa/nxs_taxa_manager.cpp \
	trees/newick_verifier.cpp \
	trees/nxs_tree_listener.cpp \
	trees/nxs_trees_block.cpp \
	trees/nxs_trees_manager.cpp
